kubernetes/ingress-service.yaml
# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: ingress-service
#   labels:
#       name: ingress-service
#   annotations:
#     nginx.ingress.kubernetes.io/use-regex: 'true'
#     kubernetes.io/ingress.class: "nginx"
#     nginx.ingress.kubernetes.io/rewrite-target: /
# spec:
#   rules:
#     - http:
#         paths:   
#         - path: /
#           pathType: Prefix
#           backend:
#             service:
#               name: client-cluster-ip-service
#               port:
#                 number: 8080

apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: 'true'    
    nginx.ingress.kubernetes.io/rewrite-target: /$1    
spec:
  rules:
    - http:
        paths:
          - path: /?(.*)          
            backend:
              serviceName: web
              servicePort: 3000
